Fix menu spacing on mobile

--- a/assets/css/_header.styl
+++ b/assets/css/_header.styl
@@ -13,6 +13,7 @@ header.main-header
       position relative
 
       li.menu-item
+        margin-top 0
         display block
         float left
         width (100/7)%
